# pleep

./: Cargo.toml  license  readme.md
.github/workflows/: build.yaml
pleep/: Cargo.toml
pleep-audio/: Cargo.toml
pleep-audio/src/: lib.rs
pleep-build/: Cargo.toml
pleep-build/src/: cli.rs  file.rs  lib.rs  main.rs
pleep-search/: Cargo.toml
pleep-search/src/: main.rs
pleep/src/: lib.rs  spectrogram.rs
