[package]
name = "pleep-search"
version = "0.1.0"
edition = "2021"

[dependencies]
pleep = { path = "../pleep/" }
pleep-audio = { path = "../pleep-audio/" }
pleep-build = { path = "../pleep-build/" }
clap = { version = "4.5.7", features = ["cargo", "derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
